Fixing alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -147,7 +147,7 @@ blockquote {
 }
 
 .about-logo {
-    text-align: right;
+    text-align: center;
 }
 
 // Navbar customization
